add image synthesis as a tool

--- a/src/agentscope/studio/templates/workstation.html
+++ b/src/agentscope/studio/templates/workstation.html
@@ -339,6 +339,11 @@
                         </div>
                         <ul class="workstation-sidebar-sub-content">
                             <li class="workstation-sidebar-dragitem unselectable-text"
+                                data-node="ImageSynthesis"
+                                draggable="true" ondragstart="drag(event)">
+                                Image Synthesis
+                            </li>
+                            <li class="workstation-sidebar-dragitem unselectable-text"
                                 data-node="ImageComposition"
                                 draggable="true" ondragstart="drag(event)">
                                 Image Composition
